Added deployments to p1-4 planets

--- a/css/bracca.css
+++ b/css/bracca.css
@@ -186,6 +186,10 @@ td {
 	top: 19%;
 	left: 61%;
 }
+.c7 {/*P3 top special*/
+	top: 46%;
+	left: 34%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 62%;
 	left: 48%;
