--- a/css/coruscant.css
+++ b/css/coruscant.css
@@ -190,6 +190,10 @@ td {
 	top: 21%;
 	left: 25%;
 }
+.c7 {/*P3 top special*/
+	top: 52%;
+	left: 48%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 68%;
 	left: 35%;
