--- a/css/dathomir.css
+++ b/css/dathomir.css
@@ -186,6 +186,10 @@ td {
 	top: 55%;
 	left: 58%;
 }
+.c7 {/*P3 top special*/
+	top: 45%;
+	left: 28%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 32%;
 	left: 37%;
