--- a/css/geonosis.css
+++ b/css/geonosis.css
@@ -190,6 +190,10 @@ td {
 	top: 77%;
 	left: 55%;
 }
+.c7 {/*P3 top special*/
+	top: 38%;
+	left: 27%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 33%;
 	left: 37%;
