--- a/css/haven.css
+++ b/css/haven.css
@@ -190,6 +190,10 @@ td {
 	top: 24%;
 	left: 25%;
 }
+.c7 {/*P3 top special*/
+	top: 22%;
+	left: 37%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 22%;
 	left: 61%;
