--- a/css/kessel.css
+++ b/css/kessel.css
@@ -190,6 +190,10 @@ td {
 	top: 32%;
 	left: 29%;
 }
+.c7 {/*P3 top special*/
+	top: 44%;
+	left: 35%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 28%;
 	left: 48%;
