--- a/css/lothal.css
+++ b/css/lothal.css
@@ -186,6 +186,10 @@ td {
 	top: 28%;
 	left: 18%;
 }
+.c7 {/*P3 top special*/
+	top: 52%;
+	left: 43%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 47%;
 	left: 27%;
