--- a/css/mustafar.css
+++ b/css/mustafar.css
@@ -190,6 +190,10 @@ td {
 	top: 26%;
 	left: 55%;
 }
+.c7 {/*P3 top special*/
+	top: 48%;
+	left: 33%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 63%;
 	left: 37%;
