--- a/css/corellia.css
+++ b/css/corellia.css
@@ -190,6 +190,10 @@ td {
 	top: 64%;
 	left: 53%;
 }
+.c7 {/*P3 top special*/
+	top: 38%;
+	left: 29%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 53%;
 	left: 20%;
