--- a/css/felucia.css
+++ b/css/felucia.css
@@ -190,6 +190,10 @@ td {
 	top: 22%;
 	left: 61%;
 }
+.c7 {/*P3 top special*/
+	top: 50%;
+	left: 38%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 70%;
 	left: 50%;
