--- a/css/kashyyyk.css
+++ b/css/kashyyyk.css
@@ -186,6 +186,10 @@ td {
 	top: 32%;
 	left: 25%;
 }
+.c7 {/*P3 top special*/
+	top: 45%;
+	left: 35%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 64%;
 	left: 30%;
