--- a/css/tatooine.css
+++ b/css/tatooine.css
@@ -186,6 +186,10 @@ td {
 	top: 32%;
 	left: 28%;
 }
+.c7 {/*P3 top special*/
+	top: 49%;
+	left: 35%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 46%;
 	left: 52%;
