--- a/css/corellia.css
+++ b/css/corellia.css
@@ -65,10 +65,18 @@ text:hover {
 	transform: translate(0, -45%);
 	top: 50%;
 	max-width: 48%;
-	padding: 1rem;
+    max-height: 85%;
+	padding: 0.5rem;
 	color: #ffffff;
 	z-index: 100;
 	border-radius: 1%;
+    
+    overflow: scroll;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+    display: block;
+    line-height: 1em;
+    overflow-x: hidden;
 }
 .desc_left {
 	left: 3%;
@@ -216,7 +224,8 @@ td {
 		top: 100%;
 		min-width: 100%;
 		min-height: 300px;
-		transform: none;
+        transform: none;
+        max-height: 200%;
 	}
 	.desc_left {
 		left: 0;
