--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
 	flex-direction: column;
 	align-items: center;
 	overflow-x: hidden;
-	background-color: #6d7487;
+	background-color: #010005;
 }
 p {
 	margin-bottom: 0;
@@ -51,6 +51,11 @@ svg text {
 text:hover {
 	display: block;
 	cursor: pointer;
+}
+.inline-icon {
+	vertical-align: middle; 
+	font-size: 10px; 
+	margin: 0 2px 0 20px;
 }
 
 
