Added NS mission

--- a/css/dathomir.css
+++ b/css/dathomir.css
@@ -190,6 +190,10 @@ td {
 	top: 63%;
 	left: 35%;
 }
+.c4 {/*P4 lower battle*/
+	top: 61%;
+	left: 24%;
+}
 .c6 {/*P3 top special*/
 	top: 55%;
 	left: 58%;
