NS mission Dathomir

--- a/css/dathomir.css
+++ b/css/dathomir.css
@@ -198,6 +198,10 @@ td {
 	top: 45%;
 	left: 28%;
 }
+.c8 {/*P3 top special*/
+	top: 62%;
+	left: 21%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 32%;
 	left: 37%;
