--- a/css/kashyyyk.css
+++ b/css/kashyyyk.css
@@ -198,6 +198,10 @@ td {
 	top: 45%;
 	left: 35%;
 }
+.c8 {/*P3 top special*/
+	top: 49%;
+	left: 27%;
+}
 .m2 {/*P3 middle platoons*/
 	top: 64%;
 	left: 30%;
