--- a/css/mandalore.css
+++ b/css/mandalore.css
@@ -24,7 +24,7 @@ p {
 	top: -10%;
 	width: 100vw;
 	height: auto;
-	background: url('../media/planets/kessel.png') no-repeat ;
+	background: url('../media/planets/manalore.png') no-repeat ;
 	background-size: contain;
 
 }
@@ -178,33 +178,29 @@ td {
 
 
 /*Mission positions*/
-.c1 {/*P4 middle battle*/
-	top: 65%;
-	left: 68%;
+.c1 {/*fleet*/
+	top: 70%;
+	left: 56%;
 }
 .c2 {/*P4 top battle*/
 	top: 39%;
-	left: 55%;
+	left: 53%;
 }
-.c3 {/*P4 lower battle*/
-	top: 60%;
+.c3 {/*BL BK*/
+	top: 70%;
+	left: 33%;
+}
+.c6 {/*mid dtmg*/
+	top: 55%;
+	left: 45%;
+}
+.c7 {/*deploy*/
+	top: 44%;
 	left: 30%;
 }
-.c4 {/*P4 lower battle*/
-	top: 57%;
-	left: 50%;
-}
-.c6 {/*P3 top special*/
+.m2 {/*platoons*/
 	top: 32%;
-	left: 29%;
-}
-.c7 {/*P3 top special*/
-	top: 44%;
-	left: 35%;
-}
-.m2 {/*P3 middle platoons*/
-	top: 28%;
-	left: 48%;
+	left: 42%;
 }
 }
 @media (min-width: 1700px) {
